:has(:lang(~)) doesn't get invalidated https://bugs.webkit.org/show_bug.cgi?id=243172

Reviewed by Antti Koivisto.

Make container query work with :lang pseudo class.

This patch introduces ElementRareData::effectiveLang to store the language of each element,
and uses Style::PseudoClassChangeInvalidation to invalidate styles for :lang pseudo class.

* LayoutTests/fast/css/lang-pseudo-container-query-invalidation-expected.html: Added.
* LayoutTests/fast/css/lang-pseudo-container-query-invalidation-xhtml-expected.html: Added.
* LayoutTests/fast/css/lang-pseudo-container-query-invalidation-xhtml.xhtml: Added.
* LayoutTests/fast/css/lang-pseudo-container-query-invalidation.html: Added.

* Source/WebCore/css/SelectorCheckerTestFunctions.h:
(WebCore::matchesLangPseudoClass): Use newly introduced effectiveLang.

* Source/WebCore/dom/Element.cpp:
(WebCore::effectiveLangFromAttribute):
(WebCore::Element::attributeChanged): Added the style invalidation logic for :lang.
(WebCore::Element::insertedIntoAncestor): Propagate the lang attribute from the parent.
(WebCore::Element::removedFromAncestor): Clear the effective lang when appropriate.
(WebCore::Element::effectiveLang const): Added.

* Source/WebCore/dom/Element.h:

* Source/WebCore/dom/ElementRareData.cpp:
(WebCore::SameSizeAsElementRareData):

* Source/WebCore/dom/ElementRareData.h:
(WebCore::ElementRareData::effectiveLang const): Added.
(WebCore::ElementRareData::setEffectiveLang): Added.
(WebCore::ElementRareData::useTypes const):

* Source/WebCore/dom/NodeRareData.h:
* Source/WebCore/style/PseudoClassChangeInvalidation.cpp:
(WebCore::Style::PseudoClassChangeInvalidation::computeInvalidation):
(WebCore::Style::PseudoClassChangeInvalidation::collectRuleSets):
* Source/WebCore/style/PseudoClassChangeInvalidation.h:
(WebCore::Style::PseudoClassChangeInvalidation::Value): Added.
(WebCore::Style::PseudoClassChangeInvalidation::PseudoClassChangeInvalidation): Added a new variant
which takes AnyValueTag as an argument.

Canonical link: https://commits.webkit.org/253530@main