Source/WebCore/dom/Element.cpp
@@ -1918,6 +1918,15 @@ static inline bool isElementsArrayReflectionAttribute(const QualifiedName& name)
         || name == HTMLNames::aria_ownsAttr;
 }
 
+static inline AtomString effectiveLangFromAttribute(const Element& element)
+{
+    if (auto* elementData = element.elementData()) {
+        if (auto* attribute = elementData->findLanguageAttribute())
+            return attribute->value();
+    }
+    return nullAtom();
+}
+
 void Element::attributeChanged(const QualifiedName& name, const AtomString& oldValue, const AtomString& newValue, AttributeModificationReason)
 {
     bool valueIsSameAsBefore = oldValue == newValue;
@@ -1961,6 +1970,28 @@ void Element::attributeChanged(const QualifiedName& name, const AtomString& oldV
             if (auto* shadowRoot = this->shadowRoot()) {
                 shadowRoot->invalidatePartMappings();
                 Style::Invalidator::invalidateShadowParts(*shadowRoot);
+            }
+        } else if (name == HTMLNames::langAttr || name.matches(XMLNames::langAttr)) {
+            Style::PseudoClassChangeInvalidation styleInvalidation(*this, CSSSelector::PseudoClassLang, Style::PseudoClassChangeInvalidation::AnyValue);
+            AtomString newValue = effectiveLangFromAttribute(*this);
+            auto setEffectiveLang = [&](Element& element) {
+                if (!newValue.isNull())
+                    element.ensureElementRareData().setEffectiveLang(newValue);
+                else if (hasRareData())
+                    element.elementRareData()->setEffectiveLang(nullAtom());                
+            };
+            setEffectiveLang(*this);
+            for (auto it = descendantsOfType<Element>(*this).begin(); it;) {
+                auto& element = *it;
+                if (auto* elementData = element.elementData()) {
+                    if (auto* attribute = elementData->findLanguageAttribute()) {
+                        it.traverseNextSkippingChildren();
+                        continue;
+                    }
+                }
+                Style::PseudoClassChangeInvalidation styleInvalidation(element, CSSSelector::PseudoClassLang, Style::PseudoClassChangeInvalidation::AnyValue);
+                setEffectiveLang(element);
+                it.traverseNext();
             }
         }
     }
@@ -2485,6 +2516,20 @@ Node::InsertedIntoAncestorResult Element::insertedIntoAncestor(InsertionType ins
             CustomElementReactionQueue::enqueueConnectedCallbackIfNeeded(*this);
     }
 
+    [&]() {
+        if (auto* parent = parentOrShadowHostElement(); parent && UNLIKELY(parent->hasRareData())) {
+            auto lang = parent->elementRareData()->effectiveLang();
+            if (!lang.isNull() && effectiveLangFromAttribute(*this).isNull()) {
+                ensureElementRareData().setEffectiveLang(lang);
+                return;
+            }
+        }
+        if (UNLIKELY(hasRareData())) {
+            if (!elementRareData()->effectiveLang().isNull() && effectiveLangFromAttribute(*this).isNull())
+                ensureElementRareData().setEffectiveLang(nullAtom());
+        }
+    }();
+
     if (shouldAutofocus(*this))
         document().topDocument().appendAutofocusCandidate(*this);
 
@@ -2548,6 +2593,11 @@ void Element::removedFromAncestor(RemovalType removalType, ContainerNode& oldPar
     clearAfterPseudoElement();
 
     ContainerNode::removedFromAncestor(removalType, oldParentOfRemovedTree);
+
+    if (UNLIKELY(hasRareData()) && !elementRareData()->effectiveLang().isNull()) {
+        if (effectiveLangFromAttribute(*this).isNull())
+            elementRareData()->setEffectiveLang(nullAtom());
+    }
 
     if (hasPendingResources())
         document().accessSVGExtensions().removeElementFromPendingResources(*this);
@@ -3823,6 +3873,16 @@ AtomString Element::computeInheritedLanguage() const
             if (auto* attribute = elementData->findLanguageAttribute())
                 return attribute->value();
         }
+    }
+    return document().contentLanguage();
+}
+
+AtomString Element::effectiveLang() const
+{
+    if (hasRareData()) {
+        auto lang = elementRareData()->effectiveLang();
+        if (!lang.isNull())
+            return lang;
     }
     return document().contentLanguage();
 }
